 * fix time-of-use vs time-of-check when ACME server returned an empty response.
   [kokke <spam@rowdy.dk>]

v2.4.6
----------------------------------------------------------------------------------------------------
 * Fixed a bug in handling multiple parallel OCSP requests. These could run into
   an assertion which terminated (and restarted) the child process where the task
   was running. Eventually, all OCSP responses were collected, but not in the way
   that things are supposed to work.
   See also <https://bz.apache.org/bugzilla/show_bug.cgi?id=65567>.
   The bug was possibly triggered when more than one OCSP status needed updating
   at the same time. For example for several renewed certificates after a server
   reload.
   Added a test case to trigger this and verify correct behaviour.

v2.4.5
----------------------------------------------------------------------------------------------------
 * Certificate/keys pairs are verified as matching before a renewal is accepted
   as successful or a staged renewal is replacing the existing certificates.
   This avoid potential mess ups in the md store file system to render the active
   certificates non-working. [@mkauf]

v2.4.4
----------------------------------------------------------------------------------------------------
 * Domain names in `<MDomain ...>` can now appear in quoted form. Fixes #257
 * Fixed a failure in ACME challenge selection that aborted further searches
   when the tls-alpn-01 method did not seem to be suitable. See #255
 * Changed the tls-alpn-01 setup to only become unsuitable when none of the
   dns names showed support for a configured 'Protocols ... acme-tls/1'. This
   allows use of tls-alpn-01 for dns names that are not mapped to a VirtualHost.

v2.4.3
----------------------------------------------------------------------------------------------------
 * Removed the old mod_ssl interworking code. The module now requires a
   Apache httpd 2.4.48 or newer.